# LinuxCources

./: README.md
1.quick_start/: linux.Quick start v1.doc  linux.Quick start v1.pptx
1.quick_start/pic2/: Thumbs.db
2.developing/: Developing in Linux v0.1.doc  linux developing.pptx
2.developing/example/hello/: CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp  hello.h  hello_world  main.cpp
2.developing/exercises/: a.out  checkex.c  hello  hello.i  hello.s  opa.c  opa_fixed.c  prep.c  testInt.c  tree.c
